# harmonyos-skills

./: .gitignore  README.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
harmonyos/: SKILL.md
harmonyos/references/: INDEX.md
harmonyos/references/best-practices/: INDEX.md  bpta-2in1-window-shape.md  bpta-add-watermark.md  bpta-ads-jump.md  bpta-agent.md  bpta-ai-ragqa.md  bpta-analysis-of-image-blurring.md  bpta-analyze-memory-problem.md  bpta-animation-frame.md  bpta-app-architecture-overview.md  bpta-app-asset-protection-design.md  bpta-app-code-ob.md  bpta-app-concurrency-design.md  bpta-app-data-security.md  bpta-app-icon-configuration.md  bpta-app-privacy-protection.md  bpta-application-aspect-programming-design.md  bpta-application-cold-start-optimization.md  bpta-application-continue-progess.md  bpta-application-gesture-share.md  bpta-application-knock-file-share.md  bpta-application-knock-video-share.md  bpta-application-latency-optimization-cases.md  bpta-application-power-analysis.md  bpta-application-power-optimization.md  bpta-application-power-test.md  bpta-application-track-practice.md  bpta-arkts-high-performance.md  bpta-arkts-js-memory-analysis.md  (+418 more)
scraper/: .gitignore  README.md  pyproject.toml  sync.sh
scraper/config/: selectors.yaml  whitelist.yaml
scraper/scripts/: converter.py  discover.py  fetcher.py  manifest.py  paths.py  probe_selectors.py  sync.py
scraper/tests/: test_converter.py  test_discover.py  test_manifest.py  test_paths.py
scraper/tests/fixtures/: article.html  sidebar.html
(+11978 files in other folders)
