[project]
name = "harmonyos-docs"
version = "0.1.0"
description = "Local mirror of HarmonyOS developer docs as Markdown for AI-assisted HarmonyOS app development"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
